# Datos-abiertos-Seguridad-y-Convivencia

./: .gitignore  CONTRIBUTING.md  Dockerfile  Informeks.md  Links Delitos.odt  Links de base de datos.Rmd  Links de base de datos.nb.html  Merge.md  README.md  README_2.md  README_2018_2024.md  Union_bases.ipynb  app2.py  app4.py  base_con_analisis.py  bases_2022_2024.py  docker-compose.yml  etl_output.txt  inspeccionar_categorias.py  links_de_base_de_datos.Rmd  out.txt  out_pob.txt  pyproject.toml  pyrightconfig.json  query_duck.py  query_out.txt  requirements.txt  union.py
.claude/: settings.local.json
.qwen/: settings.json  settings.json.orig
.streamlit/: config.toml
Datos/: DIVIPOLA.csv  DIVIPOLA.xlsx  Datos_Tabla Dvipola.py
app/: streamlit_app.py
artifacts/: calidad_catalogo_mejores_fuentes.csv  calidad_catalogo_peores_fuentes.csv  calidad_catalogo_resumen.csv
data/: 2_observatorio.ipynb  3_observatorio.ipynb  Datos_Tabla Dvipola.py  depuracion_ver1.ipynb
datos/: catalogo.yaml  diccionario_datos.md  ruta_acceso_dataset.md
docs/: Links de base de datos.Rmd  NOTEBOOKS_TROUBLESHOOTING.md  horizontes_investigacion.md  informe_final_h3.md  metodologia_tabla_maestra_h3.md  modelo_estrella.md
notebooks/: 00_union_bases_legacy.ipynb  01_eda.ipynb  02_analisis.ipynb  03_lorenz_gini_h3.ipynb  03_lorenz_gini_h3.py  03_lorenz_gini_h4.py  1_observatorio.ipynb  2018_2024 (8).py  2018_2024.py  2019_observatorio.ipynb  3_observatorio.ipynb  4_observatorio.ipynb  5_observatorio.ipynb  6_observatorio.2020-22.ipynb  8_2020_21_22_divipola_poblacion.ipynb  Informe.ipynb  (+12 more)
(+32 files in other folders)
