[project]
name = "datos-abiertos-seguridad"
version = "0.1.0"
description = "Analisis datos abiertos seguridad"
authors = [
    {name = "Daniela Murcia"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "numpy (>=1.24.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
