[tool.poetry]
name = "seguridad-convivencia"
version = "0.1.0"
description = "Observatorio de datos abiertos de seguridad y convivencia ciudadana en Colombia. Análisis de delitos 2018-2024 con datos de la Policía Nacional."
authors = ["Ustadistica <ustadistica@usantotomas.edu.co>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pandas = "^2.2"
numpy = "^1.26"
matplotlib = "^3.8"
seaborn = "^0.13"
plotly = "^5.18"
streamlit = "^1.31"
jupyter = "^1.0"
scikit-learn = "^1.4"
sodapy = "^2.2"
duckdb = "^1.0"
folium = "^0.16"
prophet = "^1.1"
pandera = "^0.18"
pyyaml = "^6.0"
requests = "^2.31"
openpyxl = "^3.1"
tqdm = "^4.66"
unidecode = "^1.3"
xlrd = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
ruff = "^0.3"
black = "^24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
